--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "angular": "~1.x",
-    "Chart.js": "1.0.2"
+    "Chart.js": "=1.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.x"
